# finite-element

./: 1D_finite_element (1).ipynb  1D_finite_element.ipynb  README.md  finite_element.ipynb  pyproject.toml  script.py
fem/: __init__.py  basis_functions.py  boundary_conditions.py  fem_solver.py  ode.py  printer.py  utils.py
pyFEMSolver.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_fem_solver.py
